fix: contact steps spacing

--- a/src/assets/scss/now-ui-kit.scss
+++ b/src/assets/scss/now-ui-kit.scss
@@ -180,6 +180,7 @@ input[type="file"] {
     }
     &.contact-steps {
         background: #fff8f6;
+        width: 95%;
         >.title {
             color: #f96332;
         }
